# msp430-hello

./: Cargo.toml  README.md
.cargo/: config.toml
src/: main.rs
